now design a header navbar and hero section in html css

--- a/index.html
+++ b/index.html
@@ -86,15 +86,13 @@
               </div>
               <!-- navigation menu end -->
               <div class="header-btn-wrap">
-                <div class="language-select">
-                  <select id="language" onchange="languageChanged()">
-                      <option value="en">En</option>
-                      <option value="es">Sp</option>
-                      <option value="fr">Fr</option>
-                      <option value="de">Ge</option>
-                      <option value="zh">Ch</option>
-                      <!-- Add more languages as needed -->
-                    </select>
+                <div class="custom-select">
+                  <select>
+                    <option value="">En</option>
+                    <option value="">En</option>
+                    <option value="">En</option>
+                    <option value="">En</option>
+                  </select>
                 </div>
                   <a href="#" class="h-btn b-btn d-lg-none d-xl-block">LOGIN</a>
                   <a href="#" class="h-btn bg-btn">GET OFFER</a>
@@ -107,7 +105,10 @@
     <!--- Header Area End Here --->
 
     <!--- Hero Section Start Here --->
-    <section class="hero-section" style="background-image: url(assets/images/hero-bg.jpg);">
+    <section class="hero-section p-relative" style="background-image: url(assets/images/hero-bg.jpg);">
+      <div class="sec-brand-logo">
+         <img src="assets/images/brand-logo.png" alt="">
+      </div>
         <div class="container">
             <div class="row">
                <div class="col-12 text-center">
