now a design trackmaster slider section complite in html css and js

--- a/index.html
+++ b/index.html
@@ -126,6 +126,70 @@
     </section>
     <!--- Hero Section End Here --->
 
+    <!--- Service Three Column Section --->
+    <section class="services-three-column-section pt-50 pb-50 pt-md-120 pb-md-120">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4">
+                   <div class="service-box service-box-1">
+                      <div class="service-icon-box">
+                          <img src="assets/images/box-icon-1.png" alt="">
+                      </div>
+                      <h3>NAVARA</h3>
+                   </div>
+                </div> 
+                <div class="col-12 col-md-4">
+                   <div class="service-box service-box-2">
+                      <div class="service-icon-box">
+                          <img src="assets/images/box-icon-2.png" alt="">
+                      </div>
+                      <h3>SOLUTIONS</h3>
+                   </div>
+                </div> 
+                <div class="col-12 col-md-4">
+                   <div class="service-box service-box-3">
+                      <div class="service-icon-box">
+                          <img src="assets/images/box-icon-3.png" alt="">
+                      </div>
+                      <h3>FEATURES</h3>
+                   </div>
+                </div> 
+            </div>
+        </div>
+    </section>
+    <!--- Service Three Column Section End --->
+
+    <!--- Trackmaster Section Start Here --->
+    <section class="trackmaster-section">
+        <div class="trackmaster-slides-active">
+          <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg.jpg);">
+            <div class="container">
+               <div class="trackmaster-content">
+                  <h1>TrackMaster</h1>
+                  <span>REAL-TIME TRACKING</span>
+              </div>
+            </div>
+          </div>
+          <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg.jpg);">
+            <div class="container">
+               <div class="trackmaster-content">
+                  <h1>Developer</h1>
+                  <span>REAL-TIME TRACKING</span>
+              </div>
+            </div>
+          </div>
+          <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg.jpg);">
+            <div class="container">
+               <div class="trackmaster-content">
+                  <h1>TrackMaster</h1>
+                  <span>REAL-TIME TRACKING</span>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+    <!--- Trackmaster Section End Here --->
+
  
   
     <!-- Footer Section Start Here -->
