now add a style about us section why choose section in html and css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
      <div id="page">
     <!------- Html Start ------->
 
-    <!--- Header Area Start Here --->
+    <!--- Header Area Start --->
     <header class="site-header">
        <div class="header_topbar">
           <div class="container container-large">
@@ -102,9 +102,9 @@
           </div>
        </div>
     </header>
-    <!--- Header Area End Here --->
+    <!--- Header Area End --->
 
-    <!--- Hero Section Start Here --->
+    <!--- Hero Section Start --->
     <section class="hero-section p-relative" style="background-image: url(assets/images/hero-bg.jpg);">
       <div class="sec-brand-logo">
          <img src="assets/images/brand-logo.png" alt="">
@@ -124,7 +124,7 @@
             </div>
         </div>
     </section>
-    <!--- Hero Section End Here --->
+    <!--- Hero Section End --->
 
     <!--- Service Three Column Section --->
     <section class="services-three-column-section pt-50 pb-50 pt-md-120 pb-md-120">
@@ -159,7 +159,7 @@
     </section>
     <!--- Service Three Column Section End --->
 
-    <!--- Trackmaster Section Start Here --->
+    <!--- Trackmaster Section Start --->
     <section class="trackmaster-section">
         <div class="trackmaster-slides-active">
           <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg.jpg);">
@@ -188,15 +188,116 @@
           </div>
         </div>
     </section>
-    <!--- Trackmaster Section End Here --->
+    <!--- Trackmaster Section End --->
+    
+    <!--- Kingdom Wide Section Start -->
+    <section class="kingdom-wide-section pt-50 pb-20 pt-md-90 pb-md-35">
+       <div class="container">
+          <div class="row">
+             <div class="col-12 text-center">
+                <div class="section-title">
+                   <h2>KINGDOM-WIDE COVERAGE</h2>
+                   <p>Our platform ensures seamless Kingdom-wide vehicles tracking and optimization, wherever your business operates.</p>
+                </div>
+                <div class="kingdom-map-wrap">
+                   <img src="assets/images/map.png" alt="">
+                </div>
+             </div>
+          </div>
+       </div>
+    </section>
+    <!--- Kingdom Wide Section End -->
+
+    <!--- Features Section Start -->
+    <section class="features-section pt-50 pb-20 pt-md-65 pb-md-40">
+        <div class="container">
+           <div class="row">
+               <div class="col-12 text-center">
+                  <div class="section-title">
+                      <h2>FEATURES</h2>
+                  </div>
+               </div>
+           </div>
+           <div class="row">
+              <div class="col-lg-4 col-md-6">
+                 <div class="features-box-wrap">
+                    <div class="feature-img">
+                       <img src="assets/images/feature-img-1.jpg" alt="">
+                    </div>
+                    <div class="features-content">
+                        <h5>Truck Management</h5>
+                        <a href="#" class="read-more-btn">Read More <i class="fa-regular fa-angle-right"></i></a>
+                    </div>
+                 </div>
+              </div>
+              <div class="col-lg-4 col-md-6">
+                 <div class="features-box-wrap">
+                    <div class="feature-img">
+                       <img src="assets/images/feature-img-2.jpg" alt="">
+                    </div>
+                    <div class="features-content">
+                        <h5>Smart Alerts</h5>
+                        <a href="#" class="read-more-btn">Read More <i class="fa-regular fa-angle-right"></i></a>
+                    </div>
+                 </div>
+              </div>
+              <div class="col-lg-4 col-md-6">
+                 <div class="features-box-wrap">
+                    <div class="feature-img">
+                       <img src="assets/images/feature-img-3.jpg" alt="">
+                    </div>
+                    <div class="features-content">
+                        <h5>Driver Management</h5>
+                        <a href="#" class="read-more-btn">Read More <i class="fa-regular fa-angle-right"></i></a>
+                    </div>
+                 </div>
+              </div>
+           </div>
+           <div class="features-btn text-center">
+               <a href="#" class="site-btn">View More</a>
+           </div>
+        </div>
+    </section>
+    <!--- Features Section End -->
+
+    <!--- About Us Section Start -->
+    <section class="about-us-section">
+       <div class="container">
+          <div class="row">
+             <div class="col-12 text-center">
+                <div class="section-title about_title">
+                   <h4 class="sec_subtitle"><span>About Us</span></h4>
+                   <h2>Smart   for Fleet Efficiency</h2>
+                   <p>SASC delivers cutting-edge telematics solutions to streamline<br/> fleet management, reduce costs, and optimize operations for<br/> businesses.</p>
+                </div>
+             </div>
+          </div>
+       </div>
+    </section>
+    <!--- About Us Section End -->
+
+    <!--- Why Choose Us Section Start -->
+    <section class="why-choose-section pt-50 pb-20 pt-md-60 pb-md-120">
+       <div class="container">
+          <div class="row">
+             <div class="col-12 text-center">
+               <div class="section-title">
+                  <h4 class="sec_subtitle"><span>Why Choose Us</span></h4>
+                  <h2>Why Partner with Us?</h2>
+               </div>
+             </div>
+          </div>
+       </div>
+    </section>
+    <!--- Why Choose Us Section End -->
 
  
   
-    <!-- Footer Section Start Here -->
+    <!-- Footer Section Start -->
     <footer class="site-footer">
       
     </footer>
-    <!-- Footer Section End Here -->
+    <!-- Footer Section End -->
 
     <!------ JS here ------>
     <script src="assets/js/jquery-3.7.1.min.js"></script>
