now a design about section why choose sectionand choose content list in html css

--- a/index.html
+++ b/index.html
@@ -266,7 +266,13 @@
           <div class="row">
              <div class="col-12 text-center">
                 <div class="section-title about_title">
-                   <h4 class="sec_subtitle"><span>About Us</span></h4>
+                  <h4 class="sec_subtitle">
+                     <h4 class="sec_subtitle">
+                         <span><img src="assets/images/play-arrow-left.png" alt=""></span>
+                         <div>About Us</div>
+                         <span><img src="assets/images/play-arrow-right.png" alt=""></span>
+                     </h4>
+                  </h4>
                    <h2>Smart   for Fleet Efficiency</h2>
                    <p>SASC delivers cutting-edge telematics solutions to streamline<br/> fleet management, reduce costs, and optimize operations for<br/> businesses.</p>
                 </div>
@@ -277,14 +283,33 @@
     <!--- About Us Section End -->
 
     <!--- Why Choose Us Section Start -->
-    <section class="why-choose-section pt-50 pb-20 pt-md-60 pb-md-120">
+    <section class="why-choose-section pt-50 pb-20 pt-md-60 pb-md-105">
        <div class="container">
           <div class="row">
              <div class="col-12 text-center">
                <div class="section-title">
-                  <h4 class="sec_subtitle"><span>Why Choose Us</span></h4>
+                  <h4 class="sec_subtitle">
+                      <span><img src="assets/images/play-arrow-left.png" alt=""></span>
+                      <div>Why Choose Us</div>
+                      <span><img src="assets/images/play-arrow-right.png" alt=""></span>
+                  </h4>
                   <h2>Why Partner with Us?</h2>
                </div>
+             </div>
+          </div>
+          <div class="row">
+             <div class="col-12">
+                 <div class="why-choose-content-wrap">
+                     <h3>Your Trusted Partner for Precision Fleet Management</h3>
+                     <p>As we continue to expand and innovate, SASC remains committed to being a trusted partner for businesses that value precision, control, and results in their fleet management operations.</p>
+                     <ul class="choose-content-list">
+                        <li>State-of-the-art telematics software solutions</li>
+                        <li>Robust truck weighing and fleet tracking features</li>
+                        <li>Customizable solutions tailored to your business</li>
+                        <li>Dedicated customer support and consultancy services</li>
+                        <li>A commitment to innovation, accuracy, and efficiency</li>
+                     </ul>
+                 </div>
              </div>
           </div>
        </div>
