now a style in you interst form section design html and css

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <!--- About Us Section End -->
 
     <!--- Why Choose Us Section Start -->
-    <section class="why-choose-section pt-50 pb-20 pt-md-60 pb-md-105">
+    <section class="why-choose-section pt-50 pb-50 pt-md-60 pb-md-105">
        <div class="container">
           <div class="row">
              <div class="col-12 text-center">
@@ -315,6 +315,52 @@
        </div>
     </section>
     <!--- Why Choose Us Section End -->
+
+    <!--- Your Interest Section Start -->
+    <section class="your-interest-section" style="background-image: url(assets/images/from-bg.png);">
+       <div class="container">
+          <div class="row">
+             <div class="col-12 text-center">
+                <div class="section-title interest_title">
+                   <h2>Register Your Interest</h2>
+                   <p>Stay updated with the latest in fleet management technology. Register for exclusive news and updates.</p>
+                </div>
+                <!-- Interest Form -->
+                <div class="your-interest-form">
+                  <form action="post">
+                     <div class="row">
+                        <div class="col-12 col-md-6">
+                           <div class="field">
+                              <label for="name">Nam</label>
+                              <input id="name" type="text" placeholder="Your Full Name">
+                           </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                           <div class="field">
+                              <label for="phone">Mobile</label>
+                              <input id="phone" type="text" placeholder="Your Phone Number">
+                           </div>
+                        </div>
+                        <div class="col-12">
+                           <div class="field">
+                              <label for="message">Mobile</label>
+                               <textarea id="message" placeholder="Share Your Thought"></textarea>
+                           </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="field field-submit">
+                                <button type="submit">Go</button>
+                                <span>Your information is secure with us.</span>
+                            </div>
+                        </div>
+                     </div>
+                  </form>
+                </div>
+             </div>
+          </div>
+       </div>
+    </section>
+    <!--- Your Interest Section End -->
 
  
   
