--- a/index.html
+++ b/index.html
@@ -362,6 +362,135 @@
     </section>
     <!--- Your Interest Section End -->
 
+    <!--- Asked Questions Section Start -->
+    <section class="asked-question-section pt-50 pb-50 pt-md-120 pb-md-120">
+        <div class="container">
+           <div class="row">
+              <div class="col-12 text-center">
+                 <div class="section-title">
+                    <h2>Frequently Asked Questions</h2>
+                    <p>Find answers to common questions about our telematics solutions. For<br/> more assistance, feel free to contact our support team!</p>
+                 </div>
+                 <!-- Accordion -->
+                   <!-- Accordion -->
+                   <div class="accordion">
+                     <div class="accordion-box">
+                        <div class="accordion-title active">
+                           <h5>Can I rent a car using a debit card?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>How can SASC Telematics help my business?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>What kind of reports can I generate?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>How does the tracking feature work?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>Can I set alerts for maintenance?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>Does the software track driver behavior?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>How can I access the software?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>Is my data secure?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>How do I get started?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                     <div class="accordion-box">
+                        <div class="accordion-title">
+                           <h5>What kind of support do you offer?</h5>
+                           <span>
+                              <i class="fa-thin fa-angle-down"></i>
+                           </span>
+                        </div>
+                        <div class="accordion-content">
+                           <p>SASC Telematics is an advanced fleet management system designed to help businesses track, monitor, and manage their trucks and drivers. Our solution includes features such as real-time tracking, maintenance alerts, driver activity reports, and much more.</p>
+                        </div>
+                     </div>
+                  </div>
+              </div>
+           </div>
+        </div>
+    </section>
+    <!--- Asked Questions Section End -->
+
  
   
     <!-- Footer Section Start -->
