--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
                      <div class="row">
                         <div class="col-12 col-md-6">
                            <div class="field">
-                              <label for="name">Nam</label>
-                              <input id="name" type="text" placeholder="Your Full Name">
+                              <label for="nam">Nam</label>
+                              <input id="nam" type="text" placeholder="Your Full Name">
                            </div>
                         </div>
                         <div class="col-12 col-md-6">
@@ -349,7 +349,7 @@
                         </div>
                         <div class="col-12">
                             <div class="field field-submit">
-                                <button type="submit">Go</button>
+                                <button type="submit" class="submit-btn">Go</button>
                                 <span>Your information is secure with us.</span>
                             </div>
                         </div>
@@ -491,11 +491,138 @@
     </section>
     <!--- Asked Questions Section End -->
 
- 
+    <!--- Get In Touch Section Start -->
+    <section class="get-in-touch-section pt-50 pb-50 pt-md-60 pb-md-60">
+       <div class="container">
+          <div class="row align-items-md-center">
+             <div class="col-12 col-lg-5 text-center">
+                <div class="get-in-touch-content">
+                   <div class="section-title">
+                      <h2>Get in Touch</h2>
+                      <span><img src="assets/images/brand-icon-white.png" alt=""></span>
+                      <p>Reach out to us for more information</p>
+                   </div>
+                   <div class="get-in-info">
+                      <a href="tel:+966 (XXX) XXXX">+966 (XXX) XXXX</a>
+                      <a href="mailto:info@sascksa.com">info@sascksa.com</a>
+                   </div>
+                </div>
+             </div>
+             <div class="col-12 col-lg-7">
+                <div class="get-in-form-wrap">
+                   <form action="post">
+                      <div class="row">
+                          <div class="col-12 col-lg-6">
+                             <div class="field get_field">
+                                <label for="name">Name</label>
+                                <input id="name" type="text" placeholder="Your Name">
+                             </div>
+                          </div>
+                          <div class="col-12 col-lg-6">
+                             <div class="field get_field">
+                                <label for="company">Company</label>
+                                <input id="company" type="text" placeholder="Your Company Name">
+                             </div>
+                          </div>
+                          <div class="col-12 col-lg-6">
+                             <div class="field get_field">
+                                <label for="phone">Mobile</label>
+                                <input id="phone" type="text" placeholder="Your Phone Number">
+                             </div>
+                          </div>
+                          <div class="col-12 col-lg-6">
+                             <div class="field get_field">
+                                <label for="email">Email</label>
+                                <input id="email" type="text" placeholder="Your Email Address">
+                             </div>
+                          </div>
+                          <div class="col-12">
+                             <div class="field get_field">
+                                <label for="email">Country</label>
+                                <div class="form-country-select">
+                                   <select>
+                                      <option value="1">Select Region</option>
+                                      <option value="2">Select Region 2</option>
+                                      <option value="3">Select Region 3</option>
+                                      <option value="4">Select Region 4</option>
+                                      <option value="5">Select Region 5</option>
+                                   </select>
+                                </div>
+                             </div>
+                          </div>
+                          <div class="col-12">
+                             <div class="field_checkbox">
+                              <label>
+                                 <input type="checkbox" id="option1">
+                                 <span class="checkmark"></span>
+                                 <p>I agree that my  personal data will  processed in accordance with SASC Privacy policy</p>
+                               </label>
+                              <label>
+                                 <input type="checkbox" id="option1">
+                                 <span class="checkmark"></span>
+                                 <p>I want to subscribe to SASC newsletter</p>
+                               </label>
+                             </div>
+                          </div>
+                          <div class="col-12 text-center">
+                           <div class="field field-submit">
+                               <button type="submit" class="submit-btn">Contact Us</button>
+                           </div>
+                       </div>
+                      </div>
+                   </form>
+                </div>
+             </div>
+          </div>
+       </div>
+    </section>
+    <!--- Get In Touch Section End -->
   
     <!-- Footer Section Start -->
     <footer class="site-footer">
-      
+        <div class="container">
+           <div class="footer-inline-wrap">
+            <div class="footer-box">
+               <div class="footer-logo-wrap">
+                   <img src="assets/images/footer-white-logo.png" alt="">
+                   <img src="assets/images/attachment-1.png" alt="">
+               </div>
+               <p class="footer-content">At SASC, we are pioneers in providing innovative telematics solutions designed to enhance fleet management, specifically in the trucking and logistics industry. Our primary focus is on accurate and reliable vehicle weighing systems that optimize operations, ensuring compliance and efficiency for businesses of all sizes.</p>
+               <div class="footer-socials">
+                  <a href="#"><img src="assets/images/linkedin.svg" alt=""></a>
+                  <a href="#"><img src="assets/images/instagram.svg" alt=""></a>
+                  <a href="#"><img src="assets/images/twitter.svg" alt=""></a>
+               </div>
+           </div>
+            <div class="footer-box">
+               <h3 class="widget-title">SOLUTION</h3>
+               <ul class="footer-menu">
+                   <li><a href="#">TrackMaster</a></li>
+                   <li><a href="#">WeighMaster</a></li>
+                   <li><a href="#">TaskMaster</a></li>
+               </ul>
+            </div>
+            <div class="footer-box">
+               <h3 class="widget-title">FEATURES</h3>
+               <ul class="footer-menu">
+                   <li><a href="#">Trucks Management</a></li>
+                   <li><a href="#">Smart Alert</a></li>
+                   <li><a href="#">Drivers Management</a></li>
+               </ul>
+            </div>
+            <div class="footer-box">
+               <h3 class="widget-title">CONTACT US</h3>
+              <div class="footer-info"> 
+                 <p><a href="mailto:Email: info@sascksa.com">Email: info@sascksa.com </a></p>
+                 <p><a href="tel:+966 (XXX) XXXX">Phone: +966 (XXX) XXXX</a></p>
+                 <p>Customer Support: support@sascksa.com</p>
+                 <p>Address: King Saud Road, Jeddah, Saudi Arabia</p>
+              </div>
+            </div>
+           </div>
+           <!-- Footer Bottom -->
+            <p class="copyright">© 2024 SASC. All rights reserved</p>
+        </div>
     </footer>
     <!-- Footer Section End -->
 
