now a style solution page 1 in html css and bootstrap

--- a/solution-1.html
+++ b/solution-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Solution-1</title>
     <!----- CSS here ----->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!----- All Min Css ------>
@@ -104,217 +104,90 @@
     </header>
     <!--- Header Area End --->
 
-    <!--- Hero Section Start --->
-    <section class="hero-section p-relative" style="background-image: url(assets/images/hero-bg.jpg);">
+      <!--- Our Solution Section Start -->
+      <section class="our-solution-section pt-50 pb-50 pt-md-60 pb-md-60">
+         <div class="container">
+            <div class="row">
+               <div class="col-12 text-center">
+               <div class="section-title">
+                  <h4 class="sec_subtitle">
+                        <span><img src="assets/images/play-arrow-left.png" alt=""></span>
+                        <div>Our Solution</div>
+                        <span><img src="assets/images/play-arrow-right.png" alt=""></span>
+                  </h4>
+                  <h2>Tailored Telematics Solutions<br/> for Your Business</h2>
+               </div>
+               </div>
+            </div>
+         </div>
+      </section>
+     <!--- Our Solution Section End -->
+    <!--- Trackmaster Section Start --->
+    <section class="trackmaster-section">
       <div class="sec-brand-logo">
          <img src="assets/images/brand-logo.png" alt="">
       </div>
-        <div class="container">
-            <div class="row">
-               <div class="col-12 text-center">
-                   <div class="hero-content">
-                      <div class="navara-text-wrap">
-                         <img src="assets/images/navara-text.png" alt="">
-                      </div>
-                      <div class="hero-btn">
-                         <a href="#" class="site-btn">Discover NAVARA</a>
-                      </div>
-                   </div>
-               </div>
-            </div>
-        </div>
-    </section>
-    <!--- Hero Section End --->
-
-    <!--- Service Three Column Section --->
-    <section class="services-three-column-section pt-50 pb-50 pt-md-120 pb-md-120">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4">
-                   <div class="service-box service-box-1">
-                      <div class="service-icon-box">
-                          <img src="assets/images/box-icon-1.png" alt="">
-                      </div>
-                      <h3>NAVARA</h3>
-                   </div>
-                </div> 
-                <div class="col-12 col-md-4">
-                   <div class="service-box service-box-2">
-                      <div class="service-icon-box">
-                          <img src="assets/images/box-icon-2.png" alt="">
-                      </div>
-                      <h3>SOLUTIONS</h3>
-                   </div>
-                </div> 
-                <div class="col-12 col-md-4">
-                   <div class="service-box service-box-3">
-                      <div class="service-icon-box">
-                          <img src="assets/images/box-icon-3.png" alt="">
-                      </div>
-                      <h3>FEATURES</h3>
-                   </div>
-                </div> 
-            </div>
-        </div>
-    </section>
-    <!--- Service Three Column Section End --->
-
-    <!--- Trackmaster Section Start --->
-    <section class="trackmaster-section">
-        <div class="trackmaster-slides-active">
-          <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg.jpg);">
-            <div class="container">
-               <div class="trackmaster-content">
-                  <h1>TrackMaster</h1>
-                  <span>REAL-TIME TRACKING</span>
-              </div>
-            </div>
-          </div>
-          <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg.jpg);">
-            <div class="container">
-               <div class="trackmaster-content">
-                  <h1>Developer</h1>
-                  <span>REAL-TIME TRACKING</span>
-              </div>
-            </div>
-          </div>
-          <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg.jpg);">
-            <div class="container">
-               <div class="trackmaster-content">
-                  <h1>TrackMaster</h1>
-                  <span>REAL-TIME TRACKING</span>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg-2.jpg);">
+         <div class="container">
+            <div class="trackmaster-content">
+               <h1>TrackMaster</h1>
+               <span>REAL-TIME TRACKING</span>
+           </div>
+         </div>
+       </div>
     </section>
     <!--- Trackmaster Section End --->
-    
-    <!--- Kingdom Wide Section Start -->
-    <section class="kingdom-wide-section pt-50 pb-20 pt-md-90 pb-md-35">
-       <div class="container">
-          <div class="row">
-             <div class="col-12 text-center">
-                <div class="section-title">
-                   <h2>KINGDOM-WIDE COVERAGE</h2>
-                   <p>Our platform ensures seamless Kingdom-wide vehicles tracking and optimization, wherever your business operates.</p>
-                </div>
-                <div class="kingdom-map-wrap">
-                   <img src="assets/images/map.png" alt="">
-                </div>
-             </div>
-          </div>
+    <!--- WeighTrack Section Start --->
+    <section class="weightrack-section pt-50 pb-50 pt-md-120 pb-md-120">
+      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/weightrack-bg.jpg);">
+         <div class="container">
+            <div class="trackmaster-content">
+               <h1>WeighTrack</h1>
+               <span>ACCURATE TRUCK WEIGHING & LOAD MANAGEMENT</span>
+           </div>
+         </div>
        </div>
     </section>
-    <!--- Kingdom Wide Section End -->
+    <!--- WeighTrack Section End --->
+    <!--- TaskMaster Section Start --->
+    <section class="taskMaster-section">
+      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg-3.jpg);">
+         <div class="container">
+            <div class="trackmaster-content">
+               <h1>TaskMaster</h1>
+               <span>Comprehensive Tasking & Routing Solution</span>
+           </div>
+         </div>
+       </div>
+    </section>
+    <!--- TaskMaster Section End --->
 
-    <!--- Features Section Start -->
-    <section class="features-section pt-50 pb-20 pt-md-65 pb-md-40">
+   <!-- Solution Box Start-->
+    <section class="solution-box-two-column pt-50 pb-50 pt-md-120 pb-md-120">
         <div class="container">
            <div class="row">
-               <div class="col-12 text-center">
-                  <div class="section-title">
-                      <h2>FEATURES</h2>
-                  </div>
+               <div class="col-12 col-md-6">
+                   <div class="solution-box-icon">
+                       <div class="box-icon">
+                           <img src="assets/images/solution-box-icon-1.png" alt="">
+                           <h3>Engineered For You</h3>
+                       </div>
+                       <p>We provide tailored solutions for every market need.</p>
+                   </div>
                </div>
-           </div>
-           <div class="row">
-              <div class="col-lg-4 col-md-6">
-                 <div class="features-box-wrap">
-                    <div class="feature-img">
-                       <img src="assets/images/feature-img-1.jpg" alt="">
-                    </div>
-                    <div class="features-content">
-                        <h5>Truck Management</h5>
-                        <a href="#" class="read-more-btn">Read More <i class="fa-regular fa-angle-right"></i></a>
-                    </div>
-                 </div>
-              </div>
-              <div class="col-lg-4 col-md-6">
-                 <div class="features-box-wrap">
-                    <div class="feature-img">
-                       <img src="assets/images/feature-img-2.jpg" alt="">
-                    </div>
-                    <div class="features-content">
-                        <h5>Smart Alerts</h5>
-                        <a href="#" class="read-more-btn">Read More <i class="fa-regular fa-angle-right"></i></a>
-                    </div>
-                 </div>
-              </div>
-              <div class="col-lg-4 col-md-6">
-                 <div class="features-box-wrap">
-                    <div class="feature-img">
-                       <img src="assets/images/feature-img-3.jpg" alt="">
-                    </div>
-                    <div class="features-content">
-                        <h5>Driver Management</h5>
-                        <a href="#" class="read-more-btn">Read More <i class="fa-regular fa-angle-right"></i></a>
-                    </div>
-                 </div>
-              </div>
-           </div>
-           <div class="features-btn text-center">
-               <a href="#" class="site-btn">View More</a>
+               <div class="col-12 col-md-6">
+                   <div class="solution-box-icon">
+                       <div class="box-icon">
+                           <img src="assets/images/solution-box-icon-2.png" alt="">
+                           <h3>A Dedicated Team for Unique Solutions</h3>
+                       </div>
+                       <p>Our team of experts is committed to delivering customized solutions for each project, understanding that every client has unique requirements to meet.</p>
+                   </div>
+               </div>
            </div>
         </div>
     </section>
-    <!--- Features Section End -->
-
-    <!--- About Us Section Start -->
-    <section class="about-us-section">
-       <div class="container">
-          <div class="row">
-             <div class="col-12 text-center">
-                <div class="section-title about_title">
-                  <h4 class="sec_subtitle">
-                     <h4 class="sec_subtitle">
-                         <span><img src="assets/images/play-arrow-left.png" alt=""></span>
-                         <div>About Us</div>
-                         <span><img src="assets/images/play-arrow-right.png" alt=""></span>
-                     </h4>
-                  </h4>
-                   <h2>Smart   for Fleet Efficiency</h2>
-                   <p>SASC delivers cutting-edge telematics solutions to streamline<br/> fleet management, reduce costs, and optimize operations for<br/> businesses.</p>
-                </div>
-             </div>
-          </div>
-       </div>
-    </section>
-    <!--- About Us Section End -->
-
-    <!--- Why Choose Us Section Start -->
-    <section class="why-choose-section pt-50 pb-50 pt-md-60 pb-md-105">
-       <div class="container">
-          <div class="row">
-             <div class="col-12 text-center">
-               <div class="section-title">
-                  <h4 class="sec_subtitle">
-                      <span><img src="assets/images/play-arrow-left.png" alt=""></span>
-                      <div>Why Choose Us</div>
-                      <span><img src="assets/images/play-arrow-right.png" alt=""></span>
-                  </h4>
-                  <h2>Why Partner with Us?</h2>
-               </div>
-             </div>
-          </div>
-          <div class="row">
-             <div class="col-12">
-                 <div class="why-choose-content-wrap">
-                     <h3>Your Trusted Partner for Precision Fleet Management</h3>
-                     <p>As we continue to expand and innovate, SASC remains committed to being a trusted partner for businesses that value precision, control, and results in their fleet management operations.</p>
-                     <ul class="choose-content-list">
-                        <li>State-of-the-art telematics software solutions</li>
-                        <li>Robust truck weighing and fleet tracking features</li>
-                        <li>Customizable solutions tailored to your business</li>
-                        <li>Dedicated customer support and consultancy services</li>
-                        <li>A commitment to innovation, accuracy, and efficiency</li>
-                     </ul>
-                 </div>
-             </div>
-          </div>
-       </div>
-    </section>
-    <!--- Why Choose Us Section End -->
+   <!-- Solution Box End-->
 
     <!--- Your Interest Section Start -->
     <section class="your-interest-section" style="background-image: url(assets/images/from-bg.png);">
