--- a/solution-2.html
+++ b/solution-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailored Telematics</title>
+    <title>TaskMaster</title>
     <!----- CSS here ----->
     <link rel="stylesheet" href="assets/css/all.min.css">
     <!----- All Min Css ------>
@@ -103,54 +103,11 @@
        </div>
     </header>
     <!--- Header Area End --->
-
-      <!--- Our Solution Section Start -->
-      <section class="our-solution-section pt-50 pb-50 pt-md-60 pb-md-60">
-         <div class="container">
-            <div class="row">
-               <div class="col-12 text-center">
-               <div class="section-title">
-                  <h4 class="sec_subtitle">
-                        <span><img src="assets/images/play-arrow-left.png" alt=""></span>
-                        <div>Our Solution</div>
-                        <span><img src="assets/images/play-arrow-right.png" alt=""></span>
-                  </h4>
-                  <h2>Tailored Telematics Solutions<br/> for Your Business</h2>
-               </div>
-               </div>
-            </div>
-         </div>
-      </section>
-     <!--- Our Solution Section End -->
-    <!--- Trackmaster Section Start --->
-    <section class="trackmaster-section">
+    <!--- TaskMaster Section Start --->
+    <section class="taskMaster-section p-relative">
       <div class="sec-brand-logo">
          <img src="assets/images/brand-logo.png" alt="">
       </div>
-      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg-2.jpg);">
-         <div class="container">
-            <div class="trackmaster-content">
-               <h1>TrackMaster</h1>
-               <span>REAL-TIME TRACKING</span>
-           </div>
-         </div>
-       </div>
-    </section>
-    <!--- Trackmaster Section End --->
-    <!--- WeighTrack Section Start --->
-    <section class="weightrack-section pt-50 pb-50 pt-md-120 pb-md-120">
-      <div class="trackmaster-slides-bg" style="background-image: url(assets/images/weightrack-bg.jpg);">
-         <div class="container">
-            <div class="trackmaster-content">
-               <h1>WeighTrack</h1>
-               <span>ACCURATE TRUCK WEIGHING & LOAD MANAGEMENT</span>
-           </div>
-         </div>
-       </div>
-    </section>
-    <!--- WeighTrack Section End --->
-    <!--- TaskMaster Section Start --->
-    <section class="taskMaster-section">
       <div class="trackmaster-slides-bg" style="background-image: url(assets/images/trackmaster-bg-3.jpg);">
          <div class="container">
             <div class="trackmaster-content">
@@ -162,32 +119,87 @@
     </section>
     <!--- TaskMaster Section End --->
 
-   <!-- Solution Box Start-->
-    <section class="solution-box-two-column pt-50 pb-50 pt-md-120 pb-md-120">
-        <div class="container">
-           <div class="row">
-               <div class="col-12 col-md-6">
-                   <div class="solution-box-icon">
-                       <div class="box-icon">
-                           <img src="assets/images/solution-box-icon-1.png" alt="">
-                           <h3>Engineered For You</h3>
-                       </div>
-                       <p>We provide tailored solutions for every market need.</p>
-                   </div>
-               </div>
-               <div class="col-12 col-md-6">
-                   <div class="solution-box-icon">
-                       <div class="box-icon">
-                           <img src="assets/images/solution-box-icon-2.png" alt="">
-                           <h3>A Dedicated Team for Unique Solutions</h3>
-                       </div>
-                       <p>Our team of experts is committed to delivering customized solutions for each project, understanding that every client has unique requirements to meet.</p>
-                   </div>
-               </div>
-           </div>
-        </div>
+    <!--- Key Feature Section Start --->
+    <section class="key-feature-section pt-50 pt-md-60 pb-md-55">
+       <div class="container">
+          <div class="row">
+             <div class="col-12 text-center">
+                <div class="section-title">
+                   <h3>Key Feature</h3>
+                </div>
+             </div>
+          </div>
+          <div class="solution-circle-box-wrap">
+            <div class="key-feature-box">
+               <h5>Smart Task Assignment</h5>
+               <p>Set up recurring tasks or adjust task priorities on the go to meet evolving business demands.</p>
+            </div>
+            <div class="key-feature-box">
+               <h5>Route Optimization</h5>
+               <p>Set up recurring tasks or adjust task priorities on the go to meet evolving business demands.</p>
+            </div>
+            <div class="key-feature-box">
+               <h5>Driver Communication Tools</h5>
+               <p>Set up recurring tasks or adjust task priorities on the go to meet evolving business demands.</p>
+            </div>
+            <div class="key-feature-box">
+               <h5>Real-Time Task Tracking</h5>
+               <p>Set up recurring tasks or adjust task priorities on the go to meet evolving business demands.</p>
+            </div>
+          </div>
+       </div>
     </section>
-   <!-- Solution Box End-->
+    <!--- Key Feature Section End --->
+
+    <!--- Solution Content Section Start --->
+    <section class="solution-content-wrapper pb-50 pb-md-100">
+       <div class="container">
+          <div class="row">
+             <div class="col-12">
+                 <div class="solution-contents">
+                    <p>TaskMaster, an integral part of NAVARA, is a comprehensive tasking and routing solution tailored to enhance fleet efficiency through intelligent task assignment and optimized route planning. Built to streamline fleet operations in industries where timing, accuracy, and cost control are critical, TaskMaster empowers businesses to manage anything from daily delivery schedules to complex logistical projects with unparalleled precision and ease.</p>
+                    <p>The core of TaskMaster lies in its smart task assignment capabilities. Using real-time data, TaskMaster dynamically matches tasks to the nearest and most suitable vehicles based on location, availability, and vehicle capabilities. This ensures that each task is completed by the right asset, reducing idle time, enhancing fleet utilization, and keeping operations on track. This automated assignment process not only improves response times but also allows fleet managers to focus on higher-level strategic decisions.</p>
+                 </div>
+             </div>
+          </div>
+          <!-- Bottom -->
+          <div class="route-optimization pt-40 pt-md-60">
+            <div class="row">
+               <div class="col-12">
+                  <div class="section-title">
+                     <h3>Route optimization</h3>
+                  </div>
+                  <div class="route-img">
+                      <img src="assets/images/route-optimization-bg.png" alt="">
+                  </div>
+                  <div class="solution-contents">
+                     <p>Route optimization as a central feature, TaskMaster leverages advanced algorithms to minimize fuel consumption and reduce delivery times. By suggesting the most efficient routes based on traffic conditions, distance, and other route variables, TaskMaster enables your fleet to achieve more in less time, ultimately lowering operational costs and increasing customer satisfaction through prompt deliveries.</p>
+                     <p>TaskMaster’s real-time task tracking feature provides fleet managers with complete visibility into the progress of every task. Managers can monitor task status, receive alerts for any delays, and ensure timely completion. This feature allows quick adjustments, enabling managers to reassign tasks, change priorities, or reroute vehicles as necessary to avoid setbacks.</p>
+                  </div>
+               </div>
+            </div>
+          </div>
+          <!-- Bottom -->
+          <div class="route-optimization pt-40 pt-md-60">
+            <div class="row">
+               <div class="col-12">
+                  <div class="section-title">
+                     <h3>TaskMaster driver<br/> communication tools</h3>
+                  </div>
+                  <div class="route-img">
+                      <img src="assets/images/taskmaster-driver-bg.png" alt="">
+                  </div>
+                  <div class="solution-contents">
+                     <p>To facilitate seamless communication, TaskMaster includes driver communication tools that keep drivers informed with real-time task updates, route modifications, and additional instructions. This constant flow of information improves driver efficiency, reduces miscommunication, and allows for quick adaptations when unexpected situations arise.</p>
+                     <p>Further enhancing operational flexibility, TaskMaster offers customizable task scheduling. Whether you need to set up recurring daily deliveries or adjust task priorities on the go, TaskMaster allows you to schedule and modify tasks easily to meet evolving business needs. This adaptability ensures that your fleet can respond swiftly to changes in demand, maximizing productivity without sacrificing accuracy.</p>
+                     <p>Overall, TaskMaster is designed to keep your fleet operating at peak efficiency, simplifying the complexities of task distribution, route planning, and real-time task management. By centralizing and automating key operational processes, TaskMaster helps fleet managers maintain control over logistics, optimize resource allocation, and keep all aspects of fleet operations organized and running smoothly.</p>
+                  </div>
+               </div>
+            </div>
+          </div>
+       </div>
+    </section>
+    <!--- Solution Content Section End --->
 
     <!--- Your Interest Section Start -->
     <section class="your-interest-section" style="background-image: url(assets/images/from-bg.png);">
